--- a/servicos_app/templates/servicos_app/home_servicos.html
+++ b/servicos_app/templates/servicos_app/home_servicos.html
@@ -1,5 +1,3 @@
 {% extends 'empregos_app/base.html' %}
 
-{% block content %}
-	<a href="{% url 'servicos_app:home_servicos' %}">Serviços</a>
-{% endblock %}
+<h1>KKKKK</h1>
