--- a/empregos_app/templates/empregos_app/base.html
+++ b/empregos_app/templates/empregos_app/base.html
@@ -1,19 +1,11 @@
 {% load static %}
 <!DOCTYPE HTML>
-<!--
-	Highlights by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>TechJobs</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
 		<link rel="stylesheet" href="{% static 'empregos_app/assets/css/main.css' %}" />
-		<!--[if lte IE 8]><link rel="stylesheet" href="assets/css/ie8.css" /><![endif]-->
-		<!--[if lte IE 9]><link rel="stylesheet" href="assets/css/ie9.css" /><![endif]-->
 	</head>
 	<body>
 
@@ -22,7 +14,7 @@
 				<header class="major">
 					<!-- Two <img src="{% static 'empregos_app/images/logo.png' %}">-->
 					<a href="{% url 'empregos_app:home' %}"><h1>TechJobs</h1></a>
-					<p>Venha trabalhar nas melhores empresas de Santa Catarina</a></p>
+					<p>As melhores ofertas de empregos na área de TI em Santa Catarina</a></p>
 				</header>
 			</section>
 
@@ -52,7 +44,6 @@
 			<script src="{% static 'empregos_app/assets/js/jquery.scrolly.min.js' %}"></script>
 			<script src="{% static 'empregos_app/assets/js/skel.min.js' %}"></script>
 			<script src="{% static 'empregos_app/assets/js/util.js' %}"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
 			<script src="{% static 'empregos_app/assets/js/main.js' %}"></script>
 
 	</body>
